# rust-ios-android

./: .gitignore  .travis.yml  README.md  build.py  build.sh  cargo-all-targets.py  cargo-config.toml  cargo-config.toml.template  create-ndk-standalone.sh  ios-fat-lib.sh  package.sh
sample/: build.sh
sample/android/: build.gradle
sample/android/gradle/wrapper/: gradle-wrapper.properties
sample/android/src/main/: AndroidManifest.xml
sample/android/src/main/java/kennytm/rust_sample/: RustSampleActivity.java
sample/android/src/main/java/kennytm/rustsample/: RustSampleActivity.java
sample/android/src/main/res/layout/: main.xml
sample/cargo/: Cargo.toml
sample/cargo/src/: lib.rs  rust_regex.h
sample/ios/: .gitignore  RustSample-Bridging-Header.h
sample/ios/RustSample/: AppDelegate.swift  Info.plist  RustRegex.m  ViewController.swift
sample/ios/RustSample.xcodeproj/: project.pbxproj
sample/ios/RustSample.xcodeproj/xcshareddata/xcschemes/: RustSample.xcscheme
sample/ios/RustSample/Base.lproj/: Main.storyboard
sample/ios/RustSampleTests/: Info.plist  RustSampleTests.swift
