[package]
name = "sample"
version = "0.1.1"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Example static library project built for iOS and Android"

[dependencies]
regex = "0.2.1"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.3.1"

[lib]
name = "sample"
crate-type = ["staticlib", "cdylib"]
