[package]
name = "sample"
version = "0.1.1"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Example static library project built for iOS and Android"

[dependencies]
regex = "0.2"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.4", default-features = false }

[lib]
name = "sample"
crate-type = ["staticlib", "cdylib"]
